# crm-project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
crm_django_project/: manage.py
crm_django_project/crm_django_project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
