[tool.poetry]
name = "crm-pet-project"
version = "0.1.0"
description = ""
authors = ["1Pvvv <potap.iv@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
aiogram = "^3.12.0"
sqlalchemy = "^2.0.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
